fixed bubbling of crawl div diff --git a/client/public/armada.css b/client/public/armada.css index 1ff7f15f..3e57210b 100644 --- a/client/public/armada.css +++ b/client/public/armada.css @@ -428,6 +428,8 @@ crawl  .crawl-container {      width: 100%;      height: 100%; +    position: fixed; +    z-index: 0;
     overflow: hidden;
 }
@@ -517,7 +519,7 @@ card display - right side
 .ship-card img {
     height: 70px;
     margin: 10px;
-    cursor: pointer;
+
 }

 .card img:hover { transform: scale(1.1) }
diff --git a/client/src/Components/Body/Right/Ships.js b/client/src/Components/Body/Right/Ships.js
index ee0c5546..19283147 100644
--- a/client/src/Components/Body/Right/Ships.js
+++ b/client/src/Components/Body/Right/Ships.js
@@ -73,6 +73,7 @@ class Ships extends Component {
             }
         });
         return (
+            <React.Fragment>
             <div className="cards-container">
                 {empireShips.map(ship => {
                     return (
@@ -85,8 +86,9 @@ class Ships extends Component {
                         </div>
                     )
                 })}}
-                {noMoreShipsDiv}
             </div>
+                {noMoreShipsDiv}
+            </React.Fragment>
         )
     }
 }
diff --git a/client/src/Components/css/Mobile.css b/client/src/Components/css/Mobile.css
index 1e731970..b07a3853 100644
--- a/client/src/Components/css/Mobile.css
+++ b/client/src/Components/css/Mobile.css
@@ -18,6 +18,7 @@
     top: 70px;
     opacity: 0;
     overflow: scroll;
+    z-index: 1;

 }
 .menu-show-mobile {
@@ -62,6 +63,11 @@
 .ship-card img {
     height: 50px;
     margin: 10px 0;
+    cursor: pointer;
+    transition: all 0.6s;
+}
+.ship-card img:active {
+    transform: scale(0.9);
 }
 .img-container {
     margin-bottom: 15px;

--- a/client/public/armada.css
+++ b/client/public/armada.css
@@ -428,6 +428,8 @@ crawl
 .crawl-container {
     width: 100%;
     height: 100%;
+    position: fixed;
+    z-index: 0;
 
     overflow: hidden;
 }
@@ -517,7 +519,7 @@ card display - right side
 .ship-card img {
     height: 70px;
     margin: 10px;
-    cursor: pointer;
+
 }
 
 .card img:hover { transform: scale(1.1) }
