--- a/client/src/Components/css/Mobile.css
+++ b/client/src/Components/css/Mobile.css
@@ -18,6 +18,7 @@
     top: 70px;
     opacity: 0;
     overflow: scroll;
+    z-index: 1;
 
 }
 .menu-show-mobile {
@@ -62,6 +63,11 @@
 .ship-card img {
     height: 50px;
     margin: 10px 0;
+    cursor: pointer;
+    transition: all 0.6s;
+}
+.ship-card img:active {
+    transform: scale(0.9);
 }
 .img-container {
     margin-bottom: 15px;
